@@ -714,7 +714,8 @@ if (hasRequest('action') && getRequest('action') == 'host.massupdateform' && has
 		'ipmi_password' => getRequest('ipmi_password', ''),
 		'inventory_mode' => getRequest('inventory_mode', HOST_INVENTORY_DISABLED),
 		'host_inventory' => getRequest('host_inventory', array()),
-		'templates' => getRequest('templates', array())
+		'templates' => getRequest('templates', array()),
+		'inventories' => zbx_toHash(getHostInventories(), 'db_field')
 	);
 
 	// sort templates
@@ -734,12 +735,6 @@ if (hasRequest('action') && getRequest('action') == 'host.massupdateform' && has
 		' WHERE h.status IN ('.HOST_STATUS_PROXY_ACTIVE.','.HOST_STATUS_PROXY_PASSIVE.')'
 	));
 	order_result($data['proxies'], 'host');
-
-	// get inventories
-	if ($data['inventory_mode'] != HOST_INVENTORY_DISABLED) {
-		$data['inventories'] = getHostInventories();
-		$data['inventories'] = zbx_toHash($data['inventories'], 'db_field');
-	}
 
 	// get templates data
 	$data['linkedTemplates'] = null;
